# Phase-Tuned-Feathering

./: .gitignore  README.md  pyproject.toml  todolist
FWA-Bench-0/: README.md
FWA-Bench-0/covariance/: diagonal.json  exponential_high_coherence.json  exponential_low_coherence.json  rank_one.json
FWA-Bench-0/expected_outputs/: array_factor_reference.csv  controllability_reference.csv  controlled_mechanism_examples.csv  phase_diagram_reference.csv
FWA-Bench-0/geometries/: feather7_baseline.json  uniform_linear_array.json
FWA-Bench-0/scripts/: reproduce_paper_figures.py
Fusion/Feathered incidence/: Feathered incidence.py
documentation/Full Paper/: Phase Tuned directivity in Feathered Wingtips.aux  Phase Tuned directivity in Feathered Wingtips.fdb_latexmk  Phase Tuned directivity in Feathered Wingtips.fls  Phase Tuned directivity in Feathered Wingtips.out  Phase Tuned directivity in Feathered Wingtips.tex  RCAA_Feathered_Wingtip_Aeroacoustics.tex
documentation/Plan and theory/: phasetunedfeathering.aux  phasetunedfeathering.fdb_latexmk  phasetunedfeathering.fls  phasetunedfeathering.out  (+2 more)
outputs/: calibration_separability_summary.json  grid_convergence_summary.json  phase_mechanism_summary.json
scripts/: calculate_calibration_separability.py  evaluate_phase_mechanism.py  latexindent_wrapper.sh  run_ga_optimization.sh  run_radiating_covariance_validation.py  run_validation_pipeline.sh  verify_grid_convergence.py
tests/: test_acoustics.py  test_geometry.py  test_propositions.py  test_radiating_covariance.py  test_validation.py  test_workflow.py
(+31 files in other folders)
